--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 body {
-  background: lighten(red, 20%);
+  background: lighten(#0068bb, 20%);
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
