--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -20,3 +20,26 @@
 .App-intro {
   font-size: large;
 }
+.App-content, .App-content > * {
+  display: flex;
+}
+
+.App-content, .App-graph-container {
+  justify-content: center;
+  align-items: center;
+}
+
+.App-content {
+  flex-flow: row;
+  width: 100%;
+  height: 100%;
+  .App-graph-container {
+    width: 50%;
+    height: 300px;
+    background-color: #c7c7c7;
+    margin: 20px;
+    &:first-child {
+      margin-right: 0px;
+    }
+  }
+}
